# apps/api/internal/platform/postgres/sqlc/querier.go
@@ -14,6 +14,8 @@ type Querier interface {
 	CreateAppUser(ctx context.Context, arg CreateAppUserParams) (AppUser, error)
 	CreateAuthSession(ctx context.Context, arg CreateAuthSessionParams) (AuthSession, error)
 	CreateCategory(ctx context.Context, arg CreateCategoryParams) (CatalogCategory, error)
+	CreateCustomer(ctx context.Context, arg CreateCustomerParams) (Customer, error)
+	CreateCustomerAddress(ctx context.Context, arg CreateCustomerAddressParams) (CustomerAddress, error)
 	CreateEstablishment(ctx context.Context, arg CreateEstablishmentParams) (Establishment, error)
 	CreateItem(ctx context.Context, arg CreateItemParams) (CatalogItem, error)
 	CreateOrder(ctx context.Context, arg CreateOrderParams) (Order, error)
@@ -27,6 +29,8 @@ type Querier interface {
 	GetAppUserByID(ctx context.Context, id pgtype.UUID) (AppUser, error)
 	GetAuthSessionByTokenHash(ctx context.Context, tokenHash string) (AuthSession, error)
 	GetCategory(ctx context.Context, arg GetCategoryParams) (CatalogCategory, error)
+	GetCustomer(ctx context.Context, arg GetCustomerParams) (Customer, error)
+	GetCustomerAddress(ctx context.Context, arg GetCustomerAddressParams) (CustomerAddress, error)
 	GetEstablishment(ctx context.Context, arg GetEstablishmentParams) (Establishment, error)
 	GetItem(ctx context.Context, arg GetItemParams) (CatalogItem, error)
 	GetOrder(ctx context.Context, arg GetOrderParams) (Order, error)
@@ -36,6 +40,8 @@ type Querier interface {
 	IncrementOutboxEventAttempts(ctx context.Context, id pgtype.UUID) error
 	ListCategories(ctx context.Context, tenantID pgtype.UUID) ([]CatalogCategory, error)
 	ListCollaborators(ctx context.Context, arg ListCollaboratorsParams) ([]ListCollaboratorsRow, error)
+	ListCustomerAddresses(ctx context.Context, arg ListCustomerAddressesParams) ([]CustomerAddress, error)
+	ListCustomers(ctx context.Context, tenantID pgtype.UUID) ([]Customer, error)
 	ListItems(ctx context.Context, tenantID pgtype.UUID) ([]CatalogItem, error)
 	ListItemsByCategory(ctx context.Context, arg ListItemsByCategoryParams) ([]CatalogItem, error)
 	ListOrderItems(ctx context.Context, arg ListOrderItemsParams) ([]OrderItem, error)
